Wed Apr 29 21:16:28 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-dialog.c (gnome_dialog_append_buttons): changed signal_connect
	for button to signal_connect_after.

1998-04-29  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-geometry.c (gnome_parse_geometry): Add preconditions;
	Support 'X' and '=' as XParseGeometry does.

1998-04-28  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-geometry.c: New file, provides X geometry string parsing.

1998-04-28  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-propertybox.c (global_apply): Use correct types for the
	parameters passed to gtk_signal_emit().

	* gnome-propertybox.h (struct _GnomePropertyBoxClass): Fixed
	prototypes for the signal handlers (they take a gint parameter as well).

Sun Apr 26 15:40:48 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock: supplied `About' icon for use in buttons

Sun Apr 26 00:18:02 1998  Havoc Pennington  <hp@pobox.com>

	* gnome-dialog.c (gnome_dialog_init): Pack the dialog's vbox 
	with expand set to TRUE.

1998-04-22  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-file-entry.c (gnome_file_entry_init): Undo the emission of
	a signal on content change, as GtkText already emitted "changed". 

Sat Apr 25 14:04:55 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock{.c,-imlib.h}: fixed apply/ok stock buttons, added trash
	and trash_full to the list of stock menu items.

Fri Apr 24 16:32:33 1998  Owen Taylor  <otaylor@gtk.org>

	* gtk-socket.c: Re-fixed destroy handling on the socket
	so that it can be destroyed correctly _and_ notifies
	the child correctly of the destruction.

Thu Apr 23 20:50:56 1998  George Lebl  <jirka@5z.com>

	* gtk-socket.c: fixed destroy handeling on the socket,
	  before it only worked if you destroyed the plug, if
	  you destroyed the socket it just messed up

1998-04-23  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-dialog.c (gnome_dialog_new): Actually set the window